--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -32,19 +32,19 @@
 	background: none;
 	cursor: pointer;
 	margin-left: auto;
-}
-.hamburger span {
-	display: block;
-	width: 33px;
-	height: 4px;
-	margin-bottom: 5px;
-	position: relative;
+	span {
+		display: block;
+		width: 33px;
+		height: 4px;
+		margin-bottom: 5px;
+		position: relative;
 
-	background-color: white;
-	border-radius: 6px;
-	z-index: 1;
-	transform-origin: 0 0;
-	transition: 0.4s;
+		background-color: white;
+		border-radius: 6px;
+		z-index: 1;
+		transform-origin: 0 0;
+		transition: 0.4s;
+	}
 }
 .hamburger:hover span:nth-child(2) {
 	transform: translate(10px);
@@ -75,25 +75,25 @@
 	background-color: #212529;
 	padding-top: 120px;
 	transition: 0.4s;
+	a:hover {
+		background-color: #358b06;
+	}
+	a {
+		display: block;
+		width: 100%;
+		max-width: 100%;
+		margin: 0 auto 16px;
+		text-align: center;
+		margin-bottom: 1vh;
+		padding: 12px 16px;
+		background-color: #212529;
+		color: white;
+		text-decoration: none;
+		list-style: none;
+	}
 }
 .mobileNav.isActiveM {
 	left: 0;
-}
-.mobileNav a {
-	display: block;
-	width: 100%;
-	max-width: 100%;
-	margin: 0 auto 16px;
-	text-align: center;
-	margin-bottom: 1vh;
-	padding: 12px 16px;
-	background-color: #212529;
-	color: white;
-	text-decoration: none;
-	list-style: none;
-}
-.mobileNav a:hover {
-	background-color: #358b06;
 }
 .menu {
 	display: none;
@@ -101,6 +101,23 @@
 	justify-content: right;
 	margin: 0 2rem;
 	color: white;
+	a {
+		padding: 0.3em 0.5em;
+		color: rgb(255, 255, 255);
+		position: relative;
+		text-decoration: none;
+		display: inline-block;
+	}
+	:after {
+		content: '';
+		display: flex;
+		border-bottom: solid 2px #0a4f94;
+		transform: scaleX(0);
+		transition: transform 0.3s ease-in-out;
+	}
+	:hover:after {
+		transform: scaleX(1);
+	}
 }
 .logo {
 	display: absolute;
@@ -114,25 +131,6 @@
 	transition: all 0.35s ease;
 }
 
-.menu a {
-	padding: 0.3em 0.5em;
-	color: rgb(255, 255, 255);
-	position: relative;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.menu :after {
-	content: '';
-	display: flex;
-	border-bottom: solid 2px #0a4f94;
-	transform: scaleX(0);
-	transition: transform 0.3s ease-in-out;
-}
-
-.menu :hover:after {
-	transform: scaleX(1);
-}
 @media (min-width: 768px) {
 	.hamburger {
 		display: none;
