--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -1,4 +1,5 @@
 @use './abstracts/colours.scss';
+@use './abstracts/font.scss';
 
 .Container {
 	max-width: 1280px;
@@ -13,9 +14,9 @@
 	left: 0;
 	right: 0;
 	z-index: 99;
-	background-color: colours.$freedomBlue;
+	background-color: colours.$mainColour;
 	padding: 16px 32px;
-	border-bottom: 3px solid colours.$freedomDarkBlue;
+	border-bottom: 1px solid colours.$secondaryColour;
 }
 .logo {
 	margin-right: auto;
@@ -41,7 +42,7 @@
 		margin-bottom: 5px;
 		position: relative;
 
-		background-color: white;
+		background-color: colours.$secondaryColour;
 		border-radius: 6px;
 		z-index: 1;
 		transform-origin: 0 0;
@@ -50,23 +51,28 @@
 }
 .hamburger:hover span:nth-child(2) {
 	transform: translate(10px);
-	background-color: #212529;
+	background-color: colours.$secondaryColour;
 }
 
 .hamburger.isActive span:nth-child(1) {
 	opacity: 0;
 	transform: translate(15px);
+	background-color: colours.$mainColour;
 }
 .hamburger.isActive span:nth-child(2) {
 	transform: translate(0px, -0.3rem) rotate(45deg);
+	background-color: colours.$mainColour;
 }
+
 .hamburger.isActive span:nth-child(3) {
 	transform: translate(-0.2rem, 0.55rem) rotate(-45deg);
+	background-color: colours.$mainColour;
 }
 .hamburger.isActive:hover span {
-	background-color: #212529;
+	background-color: colours.$secondaryColour;
 }
 .mobileNav {
+	opacity: 1;
 	display: block;
 	position: fixed;
 	top: 0;
@@ -74,21 +80,22 @@
 	width: 100%;
 	min-height: 100vh;
 	z-index: -1;
-	background-color: #212529;
+	background-color: colours.$secondaryColour;
 	padding-top: 120px;
 	transition: 0.4s;
 	a:hover {
-		background-color: #358b06;
+		background-color: colours.$highlightColour;
 	}
 	a {
 		display: block;
+		font-size: font.$fontm;
 		width: 100%;
 		max-width: 100%;
 		margin: 0 auto 16px;
 		text-align: center;
 		margin-bottom: 1vh;
 		padding: 12px 16px;
-		background-color: #212529;
+		background-color: colours.$secondaryColour;
 		color: white;
 		text-decoration: none;
 		list-style: none;
@@ -101,11 +108,13 @@
 	display: none;
 	flex: 1 1 0%;
 	justify-content: right;
-	margin: 0 2rem;
+	margin: 0 1rem;
 	color: white;
+	font-weight: 300;
 	a {
+		font-size: font.$fontm;
 		padding: 0.3em 0.5em;
-		color: rgb(255, 255, 255);
+		color: colours.$black;
 		position: relative;
 		text-decoration: none;
 		display: inline-block;
@@ -113,7 +122,7 @@
 	:after {
 		content: '';
 		display: flex;
-		border-bottom: solid 2px colours.$freedomDarkBlue;
+		border-bottom: solid 2px colours.$secondaryColour;
 		transform: scaleX(0);
 		transition: transform 0.3s ease-in-out;
 	}
