--- a/styles/abstracts/colours.scss
+++ b/styles/abstracts/colours.scss
@@ -1,2 +1,6 @@
-$freedomBlue: rgb(55, 204, 220);
-$freedomDarkBlue: rgb(10, 79, 148);
+$mainColour: rgb(255, 255, 255);
+$secondaryColour: rgba(0, 255, 255);
+$highlightColour: rgb(2, 146, 146);
+$thirdColour: rgba(40, 42, 192);
+$NavbarLinkUnderline: rgb(0, 4, 250);
+$black: rgb(0, 0, 0);
