--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+body {
+	font-family: 'Josefin Sans', cursive;
 }
