Adding Right hand side fade

--- a/styles/abstracts/colours.scss
+++ b/styles/abstracts/colours.scss
@@ -3,4 +3,4 @@ $secondaryColour: rgba(0, 255, 255);
 $highlightColour: rgb(2, 146, 146);
 $thirdColour: rgba(40, 42, 192);
 $NavbarLinkUnderline: rgb(0, 4, 250);
-$black: rgb(0, 0, 0);
+$black: rgb(0, 0, 0, 1);
