--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -69,7 +69,7 @@
 	background-color: colours.$mainColour;
 }
 .hamburger.isActive:hover span {
-	background-color: colours.$secondaryColour;
+	background-color: colours.$mainColour;
 }
 .mobileNav {
 	opacity: 1;
@@ -85,6 +85,7 @@
 	transition: 0.4s;
 	a:hover {
 		background-color: colours.$highlightColour;
+		color: colours.$mainColour;
 	}
 	a {
 		display: block;
@@ -96,7 +97,7 @@
 		margin-bottom: 1vh;
 		padding: 12px 16px;
 		background-color: colours.$secondaryColour;
-		color: white;
+		color: colours.$black;
 		text-decoration: none;
 		list-style: none;
 	}
@@ -109,7 +110,7 @@
 	flex: 1 1 0%;
 	justify-content: right;
 	margin: 0 1rem;
-	color: white;
+	color: colours.$black;
 	font-weight: 300;
 	a {
 		font-size: font.$fontm;
