--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -113,8 +113,8 @@
 	color: colours.$black;
 	font-weight: 300;
 	a {
-		font-size: font.$fontm;
-		padding: 0.3em 0.5em;
+		font-size: 2rem;
+		padding: 0em 0.5em;
 		color: colours.$black;
 		position: relative;
 		text-decoration: none;
