Full SEO. Minify JS, Add Aria-Labels, Reduce image quality, remove ScrollToTop as unwanted JS.

--- a/styles/Fade.module.scss
+++ b/styles/Fade.module.scss
@@ -73,7 +73,7 @@
 	.root {
 		color: white;
 		position: relative;
-		height: 90vh;
+		min-height: 27.5rem;
 		overflow: hidden;
 		display: flex;
 		background-size: 100%;
