--- a/styles/Fade.module.scss
+++ b/styles/Fade.module.scss
@@ -26,11 +26,17 @@
 		text-transform: capitalize;
 		font-weight: 400;
 		left: 10px;
+		font-size: 2rem;
+		font-weight: 400;
 	}
 	h2 {
 		text-transform: capitalize;
 		font-weight: 400;
 		left: 10px;
+		font-size: 2rem;
+		font-weight: 400;
+		font-size: 1.7rem;
+		font-weight: 400;
 	}
 }
 .wrapper {
@@ -64,7 +70,8 @@
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 1.2rem;
+	font-weight: 400;
 	margin: 4px 2px;
 	cursor: pointer;
 	border-radius: 7px;
