remove tailwind. add Eslint

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,5 +4,13 @@
 	box-sizing: border-box;
 }
 body {
+	font-family: 'Josefin Sans', sans-serif;
 	font-size: 1rem;
+}
+
+h1 {
+	padding-bottom: 1rem;
+}
+h2 {
+	padding-bottom: 1rem;
 }
