--- a/styles/Fade.module.scss
+++ b/styles/Fade.module.scss
@@ -127,6 +127,7 @@
 		left: 10px;
 	}
 	.button {
+		font-family: 'Josefin Sans', sans-serif;
 		background-color: colours.$secondaryColour;
 		border: none;
 		color: colours.$black;
