--- a/styles/Fade.module.scss
+++ b/styles/Fade.module.scss
@@ -62,6 +62,7 @@
 	z-index: 10;
 }
 .button {
+	font-family: 'Josefin Sans', sans-serif;
 	background-color: colours.$secondaryColour;
 	border: none;
 	color: colours.$black;
@@ -193,6 +194,7 @@
 		left: 10px;
 	}
 	.button {
+		font-family: 'Josefin Sans', sans-serif;
 		background-color: colours.$secondaryColour;
 		border: none;
 		color: colours.$black;
