--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,13 +4,15 @@
 	box-sizing: border-box;
 }
 body {
-	font-family: 'Josefin Sans', sans-serif;
+	font-family: Josefin Sans, Josefin Sans fallback, sans-serif;
 	font-size: 2rem;
 }
 
 h1 {
+	font-family: Josefin Sans, Josefin Sans fallback, sans-serif;
 	padding-bottom: 1rem;
 }
 h2 {
+	font-family: Josefin Sans, Josefin Sans fallback, sans-serif;
 	padding-bottom: 1rem;
 }
